# aibis-cloud-tools

./: .env.example  .gitignore  README.md  debug_speak.sh  pyproject.toml  speak.sh  speak_long.sh
aibis_cloud_tools/: __init__.py  tts.py  utils.py
examples/: sample.txt
lib/: utils.py
scripts/: README.md  claude-code-speaker.py  claude_code_speaker.py  debug_speak.sh  mcp_server.py  run_mcp_server.py  say.py  speak.sh  speak_long.sh
src/: aivis-cloud-tts.py  run_mcp_server.py
tests/: test_claude_code_speaker.py  test_mcp.sh  test_mcp_server.py  test_tts.py  test_utils.py
